# lighzy-interpreter

./: .gitignore  CMakeLists.txt  LICENSE  README-zh_CN.md  README.md  config.h.in
include/ast/: ArgumentsStat.hpp  ArgumentsStatement.hpp  ArrayExpr.hpp  AssignExpr.hpp  AssignExpression.hpp  BlockStat.hpp  BlockStatement.hpp  BoolExpr.hpp  BoolExpression.hpp  CallExpr.hpp  CallExpression.hpp  ExpressionStat.hpp  ExpressionStatement.hpp  ExpressionsStat.hpp  ExpressionsStatement.hpp  FloatExpr.hpp  FunctionExpr.hpp  FunctionExpression.hpp  IdentifierExpr.hpp  IdentifierExpression.hpp  IfExpr.hpp  IfExpression.hpp  InDecrementExpr.hpp  IndexExpr.hpp  InfixExpr.hpp  InfixExpression.hpp  IntegerExpr.hpp  IntegerExpression.hpp  LetStat.hpp  LetStatement.hpp  PrefixExpr.hpp  PrefixExpression.hpp  Program.hpp  ReturnStat.hpp  ReturnStatement.hpp  StringExpr.hpp  StringExpression.hpp  VarStat.hpp  WhileStat.hpp
include/ast/basic/: Expression.hpp  Node.hpp  Statement.hpp
include/evaluator/: BuiltinFuns.h  Evaluator.h
include/lexer/: Lexer.h  Token.h
include/object/: Array.hpp  Bool.hpp  BuiltInFun.hpp  BuiltinFun.hpp  Environment.hpp  Error.hpp  Float.hpp  Function.hpp  Integer.hpp  Null.hpp  ReturnValue.hpp  String.hpp
include/object/basic/: Object.h
include/parser/: Parser.h
include/program/: Program.h  initialization.h
include/visual/: ASTGenerator.h
preread-sources/stdlib/: utils.li
src/: main.cpp
src/evaluator/: BuiltinFuns.cpp  Evaluator.cpp  builtInFuns.cpp
src/lexer/: Lexer.cpp  Token.cpp
src/object/basic/: Object.cpp
src/parser/: Parser.cpp
src/program/: Program.cpp  initialization.cpp
src/visual/: ASTGenerator.cpp
test/: CMakeLists.txt  EvaluatorTest.cpp  JsonGeneratorTest.cpp  LexerTest.cpp  ParserTest.cpp  initialization.cpp  initialization.h  stdlibTest.cpp
